--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
 <body>
   <div class="vertical-center">
     <h1>The app is running correctly</h1>
-    <h2>Hello Niall</h2>
+    <h2>Hello Niall - You are cool.</h2>
 
     <p>Welcome to the Sparta Test App</p>
     <img src="/images/logo.png" />
