--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,8 +26,8 @@
 <body>
   <div class="vertical-center">
     <h1>The app is running correctly</h1>
-    <h2>Hello Niall - You are cool :P </h2>
-
+    <h2>Hello Niall</h2>
+    <p>This app was is piplined with a manual Continuous integration workflow</p>
     <p>Welcome to the Sparta Test App</p>
     <img src="/images/logo.png" />
   </div>
