--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div class="vertical-center">
-    <h1>The app is running correctly</h1>
+    <h1>The app is running sdfsdfsdcorrectly</h1>
     <h2>Hello Niall</h2>
     <p>This app was is piplined with a manual Continuous integration workflow</p>
     <p>Welcome to the Sparta Test App</p>
