--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
   <div class="vertical-center">
     <h1>The app is running sdfsdfsdcorrectly</h1>
     <h2>Hello Niall</h2>
-    <p>This app was is piplined with a manual Continuous integration workflow</p>
+    <p>This app was is pissssssplined with a manual Continuous integration workflow</p>
     <p>Welcome to the Sparta Test App</p>
     <img src="/images/logo.png" />
   </div>
