--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,9 +25,9 @@
 </head>
 <body>
   <div class="vertical-center">
-    <h1>The app is running sdfsdfsdcorrectly</h1>
+    <h1>The app is running correctly</h1>
     <h2>Hello Niall</h2>
-    <p>This app was is asdasdasd with a manual Continuous integration workflow</p>
+    <p>This app was deployed through jenkins CI</p>
     <p>Welcome to the Sparta Test App</p>
     <img src="/images/logo.png" />
   </div>
