--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
     <h1>The app is running correctly</h1>
     <h2>Hello Niall</h2>
     <p>This app was deployed through jenkins CI</p>
-    <p>Welcome to the Sparta Test App</p>
+    <p>Welcome to the Sparta Test App - 2 step</p>
     <img src="/images/logo.png" />
   </div>
 </body>
