--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div class="vertical-center">
-    <h1>The app is running correctly</h1>
+    <h1>The app is rusdfsdfsdnning correctly</h1>
     <h2>Hello Niall</h2>
     <p>This app was deployed through jenkins CI</p>
     <p>Welcome to the Sparta Test App - added slack intergration</p>
