--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,7 @@
     <h2>Hello Niall</h2>
     <p>This app was deployed through jenkins CI</p>
     <p>Welcome to the Sparta Test App - added slack intergration</p>
+    <p>Updated for jenkins + chef</p>
     <img src="/images/logo.png" />
   </div>
 </body>
