--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,7 @@
     <h1>The app is rusdfsdfsdnning correctly</h1>
     <h2>Hello Niall</h2>
     <p>This app was deployed through jenkins CI</p>
+    <p>Welcome to the Sparta Test App </p>
     <img src="/images/logo.png" />
   </div>
 </body>
